--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-jshint": "^0.12.0",
     "grunt-contrib-sass": "^0.9.2",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "velocity-animate": "^1.2.3"
   }
 }
