--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "To Do aplication - object oriented approach",
   "main": "index.js",
   "scripts": {
-    "test": "grunt dev"
+    "dev": "grunt dev"
   },
   "keywords": [
     "\u0014oToDo"
@@ -12,13 +12,13 @@
   "author": "kovacev.josip@gmail.com",
   "license": "ISC",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-clean": "^0.7.0",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-connect": "^0.11.2",
-    "grunt-contrib-copy": "^0.8.2",
-    "grunt-contrib-jshint": "^0.12.0",
-    "grunt-contrib-sass": "^0.9.2",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt": "~1.2.0",
+    "grunt-contrib-clean": "~2.0.0",
+    "grunt-contrib-concat": "~1.0.0",
+    "grunt-contrib-connect": "~3.0.0",
+    "grunt-contrib-copy": "~1.0.0",
+    "grunt-contrib-jshint": "~2.1.0",
+    "grunt-contrib-sass": "~1.0.0",
+    "grunt-contrib-watch": "~1.1.0"
   }
 }
